--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     {
       "path": "./tsconfig.node.json"
     },
-        {
-      "path": "./tsconfig.cypress.json"
-    }
+    // {
+    //   "path": "./tsconfig.cypress.json"
+    // }
   ],
   "compilerOptions": {
     "composite": true
