--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.5",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "presentia-frontend": "file:",
     "primeflex": "^3.3.1",
