--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "files": [],
-  "references": [
-    {
+  "references": [{
       "path": "./tsconfig.app.json"
     },
     {
       "path": "./tsconfig.node.json"
     },
-        {
+    {
       "path": "./tsconfig.cypress.json"
     }
   ],
   "compilerOptions": {
-    "composite": true
+    "noEmit": true,
+    "skipLibCheck": true,
+    "strict": false
   }
 }
