Add Docker configuration and utility functions for school name formatting

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-# VITE_API_BASE_URL=http://localhost:8000
-VITE_API_BASE_URL=https://presentia.smanegeri25bandung.sch.id
+# URL API untuk production
+# VITE_API_BASE_URL=https://presentia.smanegeri25bandung.sch.id
+
+# URL API untuk development
+VITE_API_BASE_URL=http://127.0.0.1:8000
+
