--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# URL API untuk production
-# VITE_API_BASE_URL=https://presentia.smanegeri25bandung.sch.id
-
-# URL API untuk development
 VITE_API_BASE_URL=http://127.0.0.1:8000
-
+# VITE_API_BASE_URL=https://api.presentia.matradipti.org
+VITE_APP_ENV=development
+VITE_APP_DEBUG=true
