--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.15.2",
+    "cypress-real-events": "^1.14.0",
+    "cypress-wait-until": "^3.0.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
