--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
+    "dev:local": "vite --mode local",
+    "dev:production": "vite --mode production",
     "build": "vite build ",
     "lint": "eslint .",
     "preview": "vite preview",
